adding social links

--- a/style.scss
+++ b/style.scss
@@ -177,7 +177,7 @@ section {
 
             .navbar-link {
                 padding: .5rem 0;
-                font-weight: bold;
+                font-weight: 500;
                 cursor: pointer;
                 transition: color .3s ease;
 
